Fix wrapping of project header component

--- a/components/roundsearch.module.css
+++ b/components/roundsearch.module.css
@@ -5,4 +5,5 @@
     color: rgba(242, 242, 242, 0.8);
     padding: 0.25rem 0.75rem;
     background: none;
+    height: 2.2rem;
 }
